--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "cords": "^1.0.4",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongo": "^0.1.0",
+    "mongoose": "^8.13.0",
     "nodemon": "^3.1.9"
   }
 }
