--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.4",
-    "cords": "^1.0.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongo": "^0.1.0",
