--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.8",
     "expo-router": "~4.0.19",
@@ -48,8 +49,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tailwindcss": "^3.4.17",
-    "expo-linear-gradient": "~14.0.2"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
