--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.8",
+    "expo-modules-core": "^2.2.3",
     "expo-router": "~4.0.19",
     "expo-sensors": "^14.0.2",
     "expo-splash-screen": "~0.29.22",
@@ -42,7 +43,7 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
-    "react-native-reanimated": "3.16.2",
+    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
