--- a/client/package.json
+++ b/client/package.json
@@ -45,7 +45,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
