--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,7 @@
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.8",
     "expo-modules-core": "^2.2.3",
-    "expo-router": "~4.0.19",
+    "expo-router": "^4.0.19",
     "expo-secure-store": "^14.0.1",
     "expo-sensors": "^14.0.2",
     "expo-splash-screen": "~0.29.22",
@@ -44,7 +44,6 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "3.16.2",
